--- a/Day one/Movie.css
+++ b/Day one/Movie.css
@@ -263,7 +263,7 @@ footer{
     background-color: #000000;
     color: #fff;
     padding: 60px 20px 20px;
-    height: 450px;
+    
 }
 footer h3{
     margin-bottom: 20px;
@@ -295,9 +295,68 @@ footer h3{
     text-decoration: underline;
     color: #e50914;
 }
-.last-footer{
+
+.foot{
     text-align: center;
     align-items: center;
-    margin-top: 20px;
-    border-top: 1px solid #333;
+    bottom: 0;
+    padding: 35px;
+    color: #fff;
+    font-size: 14px;
+    
+}
+@media (max-width: 1024px) {
+    .movie-grid {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+@media (max-width: 768px) {
+    .movie-grid {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    .feature-grid {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    .header{
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+    .hero-content h2{
+        font-size: 30px;
+    }
+    .hero-content p {
+        font-size: 16px;
+    }
+    .section-title{
+        font-size: 30px;
+    }
+    .movie-card h3{
+        font-size: 18px;
+    }
+    .movie-card p{
+        font-size: 12px;
+    }
+    .feature-card h3{
+        font-size: 18px;
+    }
+    .feature-card p{
+        font-size: 12px;
+    }
+    .btn-2{
+        font-size: 0.8rem;
+    }
+    .btn-3{
+        font-size: 16px;
+    }
+    footer h3{
+        font-size: 25px;
+    }
+    .footers{
+        margin-bottom: 20px;
+    }
+    .last-footer{
+        margin-top: 20px;
+        border-top: 1px solid #333;
+    }
 }
