--- a/Day one/Movie.css
+++ b/Day one/Movie.css
@@ -355,7 +355,7 @@ footer h3{
     .footers{
         margin-bottom: 20px;
     }
-    .last-footer{
+    .foot{
         margin-top: 20px;
         border-top: 1px solid #333;
     }
